<resources>
    <string name="app_name">Pikacha</string>
    <string name="app_title">KODE Pikacha</string>
    <string name="button_color">Colorize!</string>
    <string name="button_neural">Neuralize</string>
    <string name="button_save_string">Save</string>
    <string name="loading">Loading...</string>
    <string name="saving">Saving...</string>
    <string name="styling">Select image for styling</string>
    <string name="no_image">Firstly select image, please</string>
    <string name="error_load">Error on load</string>
    <string name="api_key">db45136e-aea1-4394-b1e6-cecfdfd8a46e</string>
</resources>
