<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ex.kode.pikachu.MainActivity"
    android:background="#0b0b0b"
    android:theme="@style/NoActionBar">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp"
        android:gravity="center_vertical|center_horizontal" />

    <ImageView
        android:id="@+id/output_image"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:elevation="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/app_title"
        android:textColor="#d6d4d4"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:elevation="3dp"
        android:id="@+id/button_save"
        android:visibility="gone"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save_string"
        android:textColor="#d6d4d4"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:elevation="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/style_image"
            android:visibility="gone"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:layout_gravity="right"
            android:layout_marginBottom="5dp"/>

        <SeekBar
            android:id="@+id/seek"
            android:visibility="gone"
            android:progress="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_colorize"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:minHeight="38dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/button_color"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button_neurolize"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:minHeight="38dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/button_neural"
                android:layout_marginLeft="10dp"
                android:textSize="18dp" />

            <ImageButton
                android:id="@+id/button_image"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:minHeight="38dp"
                android:minWidth="38dp"
                app:srcCompat="@android:drawable/ic_menu_gallery" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/loader"
        android:elevation="20dp"
        android:visibility="gone"
        android:text="@string/loading"
        android:textColor="#d6d4d4"
        android:background="@drawable/border_radius"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/saver"
        android:elevation="20dp"
        android:visibility="gone"
        android:text="@string/saving"
        android:textColor="#d6d4d4"
        android:background="@drawable/border_radius"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
